# docker-uv

./: .dockerignore  .env  .gitignore  ApptainerConverter.dockerfile  ApptainerConverter.sh  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  UV.md  docker.md  jean-zay.md
src/: main.py
