[project]
name = "science-repo"
version = "0.1.0"
description = "Reproducible scientific repository using UV and Docker"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.1",
    "pathlib>=1.0.1",
    "tqdm>=4.67.3",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
